[package]
name = "dso-138-tests"
version = "0.1.0"
authors = ["Sergey Matyukevich <geomatsi@gmail.com>"]
edition = "2018"

[dependencies]
cortex-m-rt = "0.6.13"
nb = "0.1.2"

[dependencies.rtt-target]
version = "0.3.0"
features = ["cortex-m"]

[dependencies.panic-rtt-target]
version = "0.1.1"
features = ["cortex-m"]

[dependencies.cortex-m-rtic]
version = "0.5.5"

[dependencies.cortex-m]
version="0.7.1"

[dependencies.embedded-hal]
version="0.2.4"
features=["unproven"]

[dependencies.stm32f1xx-hal]
version = "0.7.0"
features = ["stm32f103", "rt", "medium"]
