[package]
name = "dso-138-tests"
version = "0.1.0"
authors = ["Sergey Matyukevich <geomatsi@gmail.com>"]
edition = "2018"

autobins = false
autotests = false
autoexamples = false

[dependencies]
display-interface-parallel-gpio = "0.4.1"
embedded-graphics = "0.6.2"
cortex-m-rt = "0.6.13"
ili9341 = "0.4.1"
nb = "0.1.2"
rand_core = "0.6.2"
wyhash = "0.5.0"

[dependencies.rtt-target]
version = "0.3.0"
features = ["cortex-m"]

[dependencies.panic-rtt-target]
version = "0.1.1"
features = ["cortex-m"]

[dependencies.cortex-m-rtic]
version = "0.5.5"

[dependencies.cortex-m]
version="0.7.1"

[dependencies.embedded-hal]
version="0.2.4"
features=["unproven"]

[dependencies.stm32f1xx-hal]
version = "0.7.0"
features = ["stm32f103", "rt", "medium"]

# examples

[[example]]
name = "display-test1"
path = "examples/display-test1.rs"

[[example]]
name = "display-test2"
path = "examples/display-test2.rs"

[[example]]
name = "led-test1"
path = "examples/led-test1.rs"
